--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+spring.profile.active=${PROFILE}
+
+##connect azure key vault
+#spring.cloud.azure.keyvault.secret.endpoint=https://kv-rg-dev1.vault.azure.net/
+spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=https://kv-rg-dev1.vault.azure.net/
+
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=BDCUSTOMER
 spring.datasource.username=sa
-spring.datasource.password=SU2orange!
+spring.datasource.password=${secret-password-datasource-appBackArticle}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
