connect to azure sql database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,15 @@ spring.profile.active=${PROFILE}
 #spring.cloud.azure.keyvault.secret.endpoint=https://kv-rg-dev1.vault.azure.net/
 spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=https://kv-rg-dev1.vault.azure.net/
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=BDCUSTOMER
+##data source local
+spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=bdservertest
 spring.datasource.username=sa
-spring.datasource.password=${secret-password-datasource-appBackArticle}
+spring.datasource.password=SU2orange!
+
+##data source sql azure
+#spring.datasource.url=jdbc:sqlserver://bdservertest.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30
+#spring.datasource.username=luismgsa
+#spring.datasource.password=SU2orange!
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
