--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.profile.active=${PROFILE}
 spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=https://kv-rg-dev1.vault.azure.net/
 
 ##data source local
-spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=bdservertest
-spring.datasource.username=sa
-spring.datasource.password=SU2orange!
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=bdservertest
+#spring.datasource.username=${secret-user-datasource-appBackArticle}
+#spring.datasource.password=${secret-password-datasource-appBackArticle}
 
 ##data source sql azure
-#spring.datasource.url=jdbc:sqlserver://bdservertest.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30
-#spring.datasource.username=luismgsa
-#spring.datasource.password=SU2orange!
+spring.datasource.url=jdbc:sqlserver://bdservertest.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30
+spring.datasource.username=luismgsa
+spring.datasource.password=${secret-password-datasource-appBackArticle}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
