--- a/devops/AKS-service.yaml
+++ b/devops/AKS-service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: appBackArticle-svc
+  name: appback-article-svc
   labels:
-    app: "appBackArticle"
+    app: "appback-article"
 spec:
   type: LoadBalancer
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: appBackArticle
+    app: appback-article
